Kubernetes/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-deployment
  template:
    metadata:
      labels:
        app: auth-deployment
    spec:
      containers:
        - name: auth-deployment
          image: aishwaryakr/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4005
