Kubernetes/billing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-deployment
  template:
    metadata:
      labels:
        app: billing-deployment
    spec:
      containers:
        - name: billing-deployment
          image: aishwaryakr/billing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
