Kubernetes/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-deployment
  template:
    metadata:
      labels:
        app: kafka-deployment
    spec:
      containers:
      - name: kafka-deployment
        image: confluentinc/cp-kafka:7.5.0
        ports:
        - containerPort: 9092
