Kubernetes/kafka-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui-deployment
  template:
    metadata:
      labels:
        app: kafka-ui-deployment
    spec:
      containers:
      - name: kafka-ui-deployment
        image: provectuslabs/kafka-ui
        ports:
        - containerPort: 8080
