Kubernetes/patient-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-deployment
  template:
    metadata:
      labels:
        app: patient-deployment
    spec:
      containers:
        - name: patient-deployment
          image: aishwaryakr/patient-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5244
