Kubernetes/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        ports:
        - containerPort: 9090

        args:
          - "--config.file=/etc/prometheus/prometheus.yml"

        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus

      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
