Kubernetes/zookeeper-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-deployment
  template:
    metadata:
      labels:
        app: zookeeper-deployment
    spec:
      containers:
      - name: zookeeper-deployment
        image: confluentinc/cp-zookeeper:7.5.0
        ports:
        - containerPort: 2181
