Kubernetes/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-deployment
  ports:
    - port: 4005
      targetPort: 4005
