Kubernetes/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: grafana

  ports:
  - port: 3000
    targetPort: 3000
