Kubernetes/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka-deployment
  ports:
  - port: 9092
    targetPort: 9092
