Kubernetes/kafka-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
spec:
  selector:
    app: kafka-ui-deployment
  ports:
  - port: 8080
    targetPort: 8080
