Kubernetes/patient-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-deployment
  ports:
    - port: 5244
      targetPort: 5244
