Kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres-deployment
  ports:
    - port: 5432
      targetPort: 5432
