Kubernetes/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-deployment
  ports:
    - port: 6379
      targetPort: 6379
