Kubernetes/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper-deployment
  ports:
  - port: 2181
    targetPort: 2181
