Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: patient.management.system
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
